--- a/Simple Responsive Footer Design using HTML and CSS/index.html
+++ b/Simple Responsive Footer Design using HTML and CSS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Footer Tutorial</title>
+    <title>Footer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css"/>
 </head>
@@ -13,34 +13,30 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>Finegap</h4>
+                    <h4>Our Store</h4>
                     <ul>
-                        <li><a href="">Tuorials</a></li>
-                        <li><a href="">Programing</a></li>
-                        <li><a href="">Development</a></li>
-                        <li><a href="">Technology</a></li>
+                    <li><a href="#">Home</a></li>
+  	 				<li><a href="#">About</a></li>
+  	 				<li><a href="#">Services</a></li>
+  	 				<li><a href="#">Contact</a></li>
                     </ul>
                 </div>
 
                 <!-- 2nd Column -->
                 <div class="footer-col">
-                    <h4>Properties</h4>
+                    <h4>Links</h4>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact US</a></li>
-                        <li><a href="">Team</a></li>
-                        <li><a href="">Our History</a></li>
+                    <li><a href="#">Terms And Conditions</a></li>
+  	 				<li><a href="#">News</a></li>
                     </ul>
                 </div>
 
                 <!-- 3rd Column -->
                 <div class="footer-col">
-                    <h4>Services</h4>
+                    <h4>Contact Us</h4>
                     <ul>
-                        <li><a href="">API Integration</a></li>
-                        <li><a href="">Web Development</a></li>
-                        <li><a href="">Mobile Development</a></li>
+                    <li><a href="#">961-71459862</a></li>
+  	 				<li><a href="#">Debsycarob@gmail.com</a></li>
                         
                     </ul>
                 </div>
@@ -48,27 +44,19 @@
                 <!-- 3th Column -->
 
                 <div class="footer-col">
-                    <h4>Newsletter</h4>
+                    <h4>SUBSCRIBE NOWr</h4>
                     <form action="">
-                        <input type="text" placeholder="Your Name" class="inputName">
-                        <input type="email" placeholder="Enter Company Email" class="inputEmail">
+                        
+                        <input type="email" placeholder="Your Email" class="inputEmail">
                         <input type="submit" value="Submit" class="inputSubmit">
                     </form>
                 </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col">
-                    <p>&#169; 2022 Finegap. All Rights Reserved.</p>
-                </div>
-                <div class="socialIcons">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-youtube"></i></a>
-                </div>
-            </div>
+            </div>  
         </div>
+        <div class="footerBottom">
+        <p>Copyright  &copy; debsycarob2022
+		</p>
+    </div>
     </footer>
 </body>
 </html>
